--- a/src/polymer-select-box.html
+++ b/src/polymer-select-box.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<polymer-element name="polymer-select-box" constructor="PolymerSelectBox" tabindex="-1">
+<polymer-element name="select-box" tabindex="-1" attributes="available selected">
     <template>
         <style>
             :host {
@@ -13,7 +13,6 @@
                 flex-wrap: wrap;
                 align-items: center;
                 padding: 5px 8px;
-                margin: 5px;
                 position: relative;
                 outline: none;
             }
