--- a/src/select-box.html
+++ b/src/select-box.html
@@ -1,4 +1,21 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<script type="text/javascript">
+    var SelectBoxUtils = {
+        breakBinding: function(func, marker) {
+            marker = marker || "dontBind";
+            return function() {
+                if (!this[marker]) {
+                    this[marker] = true;
+                    func.apply(this, arguments);
+                    Platform.flush();
+                    this.async(function() {
+                        this[marker] = false;
+                    });
+                }
+            }
+        }
+    };
+</script>
 
 <polymer-element name="select-box" tabindex="-1" attributes="available selected">
     <template>
@@ -219,7 +236,7 @@
                         this[name + 'FocusPos'] = i;
                     }
                 }, this)
-            },
+            }
         };
         var SelectedBrowsingMixin = {
             _browseEliminateHighlighted: function() {
@@ -304,10 +321,7 @@
 
             ////////////////////////////////////////
             /////////// PUBLIC INTERFACE ///////////
-            get available() {
-                return this._available;
-            },
-            set available(choices) {
+            availableChanged: function(oldValue, newValue) {
                 this._available = choices.map(function(value, i) {
                     if (typeof value == "string") {
                         if (!value || !value.length) {
@@ -320,6 +334,7 @@
                 });
                 this._filter(this._addQuery);
             },
+            _selected SelectBoxUtils
             get selected() {
                 return this._selected;
             },
@@ -330,8 +345,8 @@
 
             ////// event handlers //////
             created: function() {
-                this._selected = [];
-                this._available = [];
+                this.selected = [];
+                this.available = [];
                 this._mode = 'add';
             },
             attached: function() {
