--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <select-box id="box" available="{{ available }}" selected="{{ selected }}"></select-box>
 
     </template>
+    <hr>
+    Placeholder:
+    <select-box id="holder" placeholder="some placeholder ..."></select-box>
 
     <hr>
     Example with lots of items:
@@ -53,8 +56,7 @@
                 }, 500);
             };
             slow.selected = ['a'];
-
-            other.focus();
+            slow.focus();
         });
     </script>
 </body>
